Fix margins and other spacing

--- a/css/style.css
+++ b/css/style.css
@@ -319,12 +319,12 @@ section {
 }
 
 .section-size {
-    min-height: 90vh;
+    min-height: 75vh;
 }
 
 #expand-influence .section-subtitle{
-    padding-left: 30vw;
-    padding-right: 30vw;
+    padding-left: 20vw;
+    padding-right: 20vw;
 }
 
 @media (max-width: 480px) {
@@ -831,7 +831,7 @@ h6 {
 }
 
 #banner-content.row {
-    padding-top: 25vh;
+    padding-top: 30vh;
     padding-bottom: 100px;
 }
 
@@ -2220,7 +2220,7 @@ blockquote {
     }
 
     #banner-content.row {
-        padding-top: 85px !important;
+        padding-top: 15vh !important;
     }
 
     /*-----------------Sections-----------------*/
@@ -2324,7 +2324,7 @@ blockquote {
     }
 
     #banner-content.row {
-        padding-top: 15vh !important;
+        padding-top: 20vh !important;
     }
 
     /*-----------------Sections-----------------*/
